--- a/gb/21/10/15/n13306313.md
+++ b/gb/21/10/15/n13306313.md
@@ -1,60 +1,60 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/twgtwq3278/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/twgtwq3278/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/twgtwq3278/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/twgtwq3278/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/twgtwq3278/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/twgtwq3278/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/twgtwq3278/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/twgtwq3278/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/twgtwq3278/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/twgtwq3278/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/twgtwq3278/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/twgtwq3278/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/twgtwq3278/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/twgtwq3278/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/twgtwq3278/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/twgtwq3278/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/twgtwq3278/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/twgtwq3278/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/twgtwq3278/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/twgtwq3278/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/twgtwq3278/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/twgtwq3278/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/twgtwq3278/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/twgtwq3278/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>基隆再度荣获户政业务绩效评鉴优等第1名</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2021年10月15日讯】（大纪元记者陈秀媛台湾基隆报导）内政部对直辖市、县（市）政府执行2020年<ahref="https://github.com/twgtwq3278/djy/blob/master/gb/tag/%E6%88%B7%E6%94%BF%E4%B8%9A%E5%8A%A1.md#1">户政业务</a>绩效评鉴成绩揭晓，基隆市政府荣获人口总数未满45万人县（市）政府组第一名，并获得内政部评选为“110（2021）年绩优户政机关楷模”的殊荣，内政部全国户政日庆祝大会暨表扬绩优户政机关、户政人员、户政志工活动于10月15日举办线上颁奖表扬典礼。</p>
+<p>【大纪元2021年10月15日讯】（大纪元记者陈秀媛台湾基隆报导）内政部对直辖市、县（市）政府执行2020年<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%88%B7%E6%94%BF%E4%B8%9A%E5%8A%A1.md#1">户政业务</a>绩效评鉴成绩揭晓，基隆市政府荣获人口总数未满45万人县（市）政府组第一名，并获得内政部评选为“110（2021）年绩优户政机关楷模”的殊荣，内政部全国户政日庆祝大会暨表扬绩优户政机关、户政人员、户政志工活动于10月15日举办线上颁奖表扬典礼。</p>
 <p>基隆市政府在此次的评鉴中，除在办理户籍登记、国籍案件、户籍人口统计、户政资讯作业、内部管理及便民服务等方面皆表现优异外，在新冠疫情期间，为及时纾困，协助家庭防疫补贴对象户籍资料清查、疫苗施打通知名册制作及户籍资料异动跨机关通报等便民服务措施，免除民众奔波往返的申请流程。</p>
-<p>近年来随着资讯科技日益精进，户政服务e化与时俱进，透过户政<ahref="https://github.com/twgtwq3278/djy/blob/master/gb/tag/%E8%B5%84%E8%AE%AF%E7%B3%BB%E7%BB%9F.md#1">资讯系统</a>首次申请护照民众，可就近到户政事务所申办、注册自动通关等服务；另<ahref="https://github.com/twgtwq3278/djy/blob/master/gb/tag/%E6%97%A0%E7%BA%B8%E5%8C%96.md#1">无纸化</a>便民服务柜台，利用数位电子签章，将申请书以电子档案方式归档，环保节能减碳，节省档案储藏空间。</p>
+<p>近年来随着资讯科技日益精进，户政服务e化与时俱进，透过户政<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B5%84%E8%AE%AF%E7%B3%BB%E7%BB%9F.md#1">资讯系统</a>首次申请护照民众，可就近到户政事务所申办、注册自动通关等服务；另<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%A0%E7%BA%B8%E5%8C%96.md#1">无纸化</a>便民服务柜台，利用数位电子签章，将申请书以电子档案方式归档，环保节能减碳，节省档案储藏空间。</p>
 <p>责任编辑：唐音</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/19/4/1/n11155514.md#1">台铁第四代票务系统 推APP无纸化</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/19/7/1/n11357327.md#1">全国户政日 黄敏惠感谢同仁的辛劳</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/20/6/29/n12219293.md#1">庆祝户政日  户政柜台无纸化暨艺廊烧烙展</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/1/19/n12698002.md#1">基隆推智慧校园 学杂费缴费单无纸化</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/7/1/n13060114.md#1">首创县市层级服务 “台中户政ONLINE”上线</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/8/26/n13188447.md#1">桃市消防局建置辅助抢救资讯系统  率全国之先</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/14/n13304462.md#1">建构零歧视社会 基市特教班参与融合教育</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/14/n13304107.md#1">84岁阿嬷李郑淑热心奉献 获乐龄教育志工奉献奖</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/14/n13304096.md#1">谢国梁宣布参选  基隆市长各方角逐者浮现</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/14/n13303987.md#1">花莲豪雨农损估破千万 农委会启动灾害救助</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/4/1/n11155514.md#1">台铁第四代票务系统 推APP无纸化</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/1/n11357327.md#1">全国户政日 黄敏惠感谢同仁的辛劳</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/29/n12219293.md#1">庆祝户政日  户政柜台无纸化暨艺廊烧烙展</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/19/n12698002.md#1">基隆推智慧校园 学杂费缴费单无纸化</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/1/n13060114.md#1">首创县市层级服务 “台中户政ONLINE”上线</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/8/26/n13188447.md#1">桃市消防局建置辅助抢救资讯系统  率全国之先</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680613.md#1">4/2-4/5 传艺出状元 儿童免费入园</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679159.md#1">环游世界玩数学来台东 带学生体验数学奥妙</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678938.md#1">翘班喝酒造成破口　基市警局：痛心、究责</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678492.md#1">基隆增10例 林右昌：加设三个筛检站</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262822.md#1" target="_blank">【征文】兰音：传统社会中妻子的真实地位</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/11/6/n4003814.md#1" target="_blank">信师信法　一路前行（下）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/21/n11128349.md#1" target="_blank">明白人：“纪念”“烧木炭”而死的张思德</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/7/n13289075.md#1">【百年真相】 骇世惊俗的告白 瞿秋白《多余的话》</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/4/n13281397.md#1">中国佛教史上最大法难——中共毁灭佛教</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/8/n13291558.md#1">【未解之谜】传奇女祭司 三千年后重回神庙</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/5/n13283972.md#1">【未解之谜】“江南布衣” 图案背后的秘密</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/7/n13288631.md#1">不因未婚妻患病貌丑毁婚约 君子守信得福报</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/14/n13304862.md#1">【直播】美国会听证：评估香港人权状况</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/14/n13305099.md#1">【新闻看点 】重返人权理事会 美将与中共对决</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/14/n13304453.md#1">【拍案惊奇】终结台湾核武梦的CIA线人张宪义</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/13/n13301487.md#1">【独家】湖北纵火案逾20人死伤 消息遭封锁</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/12/n13299881.md#1">王友群：习近平九年反“政变”之路</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/12/n13300005.md#1">【方菲访谈】谢金河：中国经济的最大变数</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/12/n13299943.md#1">陆第一网红papi酱工作室注销 称决议解散</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/12/n13298305.md#1">比莉隔15年复出作《妈，别闹了！》 将登Netflix</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/12/n13300452.md#1">音乐节演出被取消 歌手宋冬野喊话求放条生路</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/12/n13298927.md#1">黄子佼规划60岁退休 已锁定数位接班人</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/13/n13302574.md#1">每年逾300个剧本邀约 孙俪拒演16岁少女</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/9/8/n13218308.md#1">耳穴竟如此神奇！这样按耳朵提升免疫力、减肥</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/13/n13300831.md#1">脖子上套着轮胎2年 这只驼鹿终于解脱了</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/2/n13276599.md#1">远离胃酸逆流！营养师：这些膳食纤维是食疗首选</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/12/n13299239.md#1">【健康1+1】疫情下降 背后真正原因不是疫苗？</a></li>
-<li><a href="https://github.com/twgtwq3278/djy/blob/master/gb/21/10/13/n13301342.md#1">曾因自拍爆红 大猩猩临终前拥抱一生的恩人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674994.md#1">【财商天下】普京出险招 欧盟如何应对</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675351.md#1">【横河观点】乌克兰抗俄给台湾的借鉴与启示</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675602.md#1">砸60万装修餐厅 《营业中》开播吸引粉丝前来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/twgtwq3278/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/twgtwq3278/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/15/n13306313.htm">基隆再度荣获户政业务绩效评鉴优等第1名</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/15/n13306313.htm">基隆再度荣获户政业务绩效评鉴优等第1名</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/twgtwq3278/djy/blob/master/gb/21/10/15/n13306313.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/twgtwq3278/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/twgtwq3278/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/twgtwq3278/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/twgtwq3278/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twgtwq3278/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/15/n13306313.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
